Unificación de colores

--- a/src/components/CelebrationDetails.astro
+++ b/src/components/CelebrationDetails.astro
@@ -100,7 +100,7 @@ import EventTimes from "./parts/EventTimes.astro";
 
     .celebration__title {
       text-align: center;
-      background-color: var(--color-gold);
+      background-color: var(--color-highlight-dark);
       border-radius: 5px 20px 5px;
       min-width: 50%;
       color: white;
@@ -121,7 +121,7 @@ import EventTimes from "./parts/EventTimes.astro";
       place-items: center;
       gap: 18px;
       h3 {
-        color: $color-dark-green;
+        color: $color-accent-dark;
         font-size: 2rem;
       }
 
