--- a/src/components/CoverPhrase.astro
+++ b/src/components/CoverPhrase.astro
@@ -26,14 +26,14 @@ import Icon from "./parts/Icon.astro";
       display: flex;
       justify-content: center;
       font-size: 2.5rem;
-      color: $color-gold;
+      color: $color-highlight-dark;
     }
     .cover-phrase__phrase {
       text-align: center;
       font-size: 5rem;
       font-weight: 500;
       line-height: 65px;
-      color: $color-dark-green;
+      color: $color-accent-dark;
       padding: 20px 20px;
       @media (max-width: 768px) {
         font-size: 4rem;
