--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const { autor } = Astro.props;
     display: grid;
     place-items: center;
     height: 50px;
-    color: $color-dark-green;
+    color: $color-accent-dark;
     font-weight: 600;
   }
 </style>
