--- a/src/components/Instagram.astro
+++ b/src/components/Instagram.astro
@@ -50,7 +50,7 @@ import Icon from "./parts/Icon.astro";
     gap: 18px;
     max-width: 90%;
     h3 {
-      color: $color-dark-green;
+      color: $color-accent-dark;
       font-size: 2rem;
     }
 
