--- a/src/components/Party.astro
+++ b/src/components/Party.astro
@@ -140,8 +140,8 @@ import PreBoda from "./parts/PreBoda.astro";
     height: 100%;
     padding: 1rem;
     border-radius: 25px;
-    background-color: $color-light-beige;
-    color: $color-dark-green;
+    background-color: $color-bg-secondary;
+    color: $color-accent-dark;
   }
 
   .party__text {
