--- a/src/components/parts/EventTimes.astro
+++ b/src/components/parts/EventTimes.astro
@@ -122,25 +122,25 @@ const linkBusMolinos = "https://maps.app.goo.gl/nWqqT3uJ3QkZeRPB8";
   }
 
   .bus-time__card {
-    background-color: $color-bg-beige;
-    border: 2px solid $color-gold;
+    background-color: $color-bg-primary;
+    border: 2px solid $color-highlight-dark;
     width: 100% !important;
     transition: 0.5s ease;
     cursor: pointer;
 
     &:hover {
-      border-color: $color-dark-green;
+      border-color: $color-accent-dark;
     }
   }
 
   .bus-time__icon {
-    background-color: $color-bg-beige;
-    border: 2px solid $color-gold;
+    background-color: $color-bg-primary;
+    border: 2px solid $color-highlight-dark;
   }
   .bus-time__title {
     font-size: 1.2rem;
     font-weight: bold;
-    color: $color-dark-green;
+    color: $color-accent-dark;
     text-align: start;
     text-wrap: balance;
   }
