--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -65,14 +65,14 @@ const { title, id, open, close } = Astro.props;
     .modal__title {
       h1 {
         margin-bottom: 1rem;
-        color: $color-dark-green;
+        color: $color-accent-dark;
         font-weight: 700;
         font-size: 1.9rem;
       }
     }
 
     .modal__body {
-      color: $color-dark-green;
+      color: $color-accent-dark;
     }
 
     .modal__footer {
@@ -87,7 +87,7 @@ const { title, id, open, close } = Astro.props;
       border: none;
       outline: none;
       padding: 5px;
-      background-color: $color-gold;
+      background-color: $color-highlight-dark;
       cursor: pointer;
       .close-icon {
         height: 20px;
