--- a/src/components/HelpUs.astro
+++ b/src/components/HelpUs.astro
@@ -64,8 +64,8 @@ import Slider from "./parts/Slider.astro";
     height: 100%;
     padding: 1rem;
     border-radius: 25px;
-    background-color: $color-light-beige;
-    color: $color-dark-green;
+    background-color: $color-bg-secondary;
+    color: $color-accent-dark;
   }
 
   .helpus__text {
