--- a/src/components/parts/ClipBoard.astro
+++ b/src/components/parts/ClipBoard.astro
@@ -33,20 +33,20 @@ const { id, text, name } = Astro.props;
       display: grid;
       place-items: center;
       text-wrap: balance;
-      background-color: $color-bg-beige;
-      color: $color-dark-green;
+      background-color: $color-bg-primary;
+      color: $color-accent-dark;
       border-radius: 25px 0 0 25px;
-      border: 1px solid $color-dark-green;
+      border: 1px solid $color-accent-dark;
       width: 230px;
       padding: 0 5px;
     }
 
     .btn-clipboard {
       width: 50px;
-      color: $color-gold;
-      background-color: $color-bg-beige;
+      color: $color-highlight-dark;
+      background-color: $color-bg-primary;
       border-radius: 0px 25px 25px 0px;
-      border: 1px solid $color-dark-green;
+      border: 1px solid $color-accent-dark;
       border-left: none;
       padding: 10px;
       transition:
@@ -54,8 +54,8 @@ const { id, text, name } = Astro.props;
         color 0.5s ease;
     }
     .btn-clipboard:hover {
-      background-color: $color-light-beige;
-      color: $color-dark-green;
+      background-color: $color-bg-secondary;
+      color: $color-accent-dark;
     }
   }
 </style>
