--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -2,7 +2,7 @@
 /* Works on Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: $color-gold $color-light-beige;
+    scrollbar-color: $color-highlight-dark $color-bg-secondary;
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -11,12 +11,12 @@
 }
 
 *::-webkit-scrollbar-track {
-    background: $color-light-beige;
+    background: $color-bg-secondary;
     border-radius: 20px;
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: $color-dark-green;
+    background-color: $color-accent-dark;
     border-radius: 20px;
-    border: 3px solid $color-light-beige;
+    border: 3px solid $color-bg-secondary;
 }
