--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -57,7 +57,7 @@ const { title, id, open, close } = Astro.props;
       max-width: 600px;
       padding: 2rem;
       text-align: center;
-      background-image: url("/assets/images/fondo.webp");
+      background-image: url("/assets/images/fondo.jpg");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
