--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -53,7 +53,7 @@ p {
 }
 
 .wrapper-background {
-    background-image: url("/assets/images/fondo.webp");
+    background-image: url("/assets/images/fondo.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
