--- a/src/components/CoverPhrase.astro
+++ b/src/components/CoverPhrase.astro
@@ -8,7 +8,7 @@ import Icon from "./parts/Icon.astro";
   </p>
 
   <p class="cover-phrase__phrase font-start-midnight">
-    El amor no puede esperar y la cerveza tampoco por que se calienta
+    Mamá, ¡Me voy a casar!
   </p>
 
   <p class="cover-phrase__quote">
