--- a/src/components/CoverPhrase.astro
+++ b/src/components/CoverPhrase.astro
@@ -20,7 +20,12 @@ const targetDate = "December 9, 2024 23:59:59"; // Fecha objetivo
   </p>
 </section>
 
+<section class="container cover-phrase">
+  <h5 class="cover-phrase__phrase">
+    Cuenta atrás hasta la publicación de Viento y Verdad:
+  </h5>
 
+</section>
 <CountdownTimer targetDate={targetDate} />
 
 
